<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.SerieActivity"
    tools:showIn="@layout/app_bar_serie">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/strSerieTitle"
        android:id="@+id/serieTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>
    <LinearLayout
        android:id="@+id/lineLay1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/serieTitle"
        android:layout_alignParentStart="true"
        android:padding="2dp"
        android:dividerPadding="2dp"
        android:focusable="false"
        android:textAlignment="center"
        android:showDividers="middle"
        android:divider="#000000"
        android:gravity="center_horizontal"
        android:theme="@style/AppTheme"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serieYear"
            android:id="@+id/serieYear"
            android:layout_gravity="center_horizontal"
            android:padding="2dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strRuntime"
            android:id="@+id/serieRuntime"
            android:linksClickable="false"
            android:padding="2dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strRate"
            android:id="@+id/serieRate"
            android:linksClickable="false"
            android:padding="2dp"/>

    </LinearLayout>

    <ImageView
        android:layout_width="152dp"
        android:layout_height="252dp"
        android:id="@+id/seriePosterImage"
        android:layout_below="@+id/lineLay1"
        android:padding="5dp"
        android:layout_alignParentStart="true"/>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:fillViewport="true"
        android:layout_below="@+id/lineLay1"
        android:layout_toEndOf="@+id/seriePosterImage"
        android:padding="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seriePlot"
            android:id="@+id/seriePlot"
            android:layout_below="@+id/lineLay1"
            android:layout_toEndOf="@+id/seriePosterImage"/>
    </ScrollView>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/serieSeasonList"
        android:layout_below="@+id/seriePosterImage"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
