<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.alessandro.serietvguide.activity.MovieActivity"
    tools:showIn="@layout/app_bar_movie"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/strTitleMovie"
                android:id="@+id/txtTitleMovie"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"/>

            <LinearLayout
                android:id="@+id/lineLay1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtTitleMovie"
                android:layout_alignParentStart="true"
                android:padding="2dp"
                android:dividerPadding="2dp"
                android:focusable="false"
                android:textAlignment="center"
                android:showDividers="middle"
                android:divider="#000000"
                android:gravity="center_horizontal"
                android:theme="@style/AppTheme"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strYear"
                    android:id="@+id/txtYear"
                    android:layout_gravity="center_horizontal"
                    android:padding="2dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strRuntime"
                    android:id="@+id/txtRuntime"
                    android:linksClickable="false"
                    android:padding="2dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strRate"
                    android:id="@+id/txtRate"
                    android:linksClickable="false"
                    android:padding="2dp"/>

            </LinearLayout>

            <ImageView
                android:layout_width="152dp"
                android:layout_height="252dp"
                android:id="@+id/imgPosterMovie"
                android:contentDescription="Movie Poster"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_below="@+id/lineLay1"
                android:layout_alignParentStart="true"
                android:padding="5dp"
                android:clickable="true"/>
            <ScrollView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:fillViewport="true"
                android:layout_below="@+id/lineLay1"
                android:layout_toEndOf="@+id/imgPosterMovie"
                android:padding="10dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strMoviePlot"
                    android:id="@+id/txtMoviePlot"
                    />
            </ScrollView>

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cast"
                android:layout_weight="1"
                android:layout_below="@+id/imgPosterMovie"
                android:layout_alignParentStart="true"
                android:clickable="true"
                android:contextClickable="true"/>


</RelativeLayout>
